[package]
name = "Cafetera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
serde_with = "3.7.0"
toml = "0.8.14"
hteapot = {path = "../hteapot"}
