[package]
name = "cafetera"
version = "0.5.0"
edition = "2021"
description = "simple HTTP mock server"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
serde_with = "3.7.0"
toml = "0.8.14"
hteapot = "0.6.0"
#hteapot = { path = "../hteapot" }
